# Ser00

./: .gitignore
Convert/: convert.cpp  sindik.md
Phonebook/: Contact.cpp  Contact.h  contactlist.cpp  contactlist.h  mainwindow.cpp  mainwindow.ui
ex00/Convert/: convert.cpp.autosave
ex00/Oldphonebook/: CMakeLists.txt  main.cpp
ex01/carclass/: CMakeLists.txt  main.cpp
ex01/sportcar/: CMakeLists.txt  main.cpp
ex01/sportcarplus/: CMakeLists.txt  main.cpp
ex02/smartpointer/: CMakeLists.txt  main.cpp
